Read and Parser files